fix overflow issue in mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -103,6 +103,10 @@ section {
   display: block;
 }
 
+.img {
+  width: 100%;
+}
+
 body {
   line-height: 1;
 }
